--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
     </header>
     <nav>
         <ul>
-            <li><a href="#">Tab 1</a></li>
-            <li><a href="#">Tab 2</a></li>
-            <li><a href="#">Tab 3</a></li>
-            <li><a href="#">Tab 4</a></li>
-            <li><a href="#">Tab 5</a></li>
-            <li><a href="#">Tab 6</a></li>
-            <li><a href="#">Tab 7</a></li>
-            <li><a href="#">Tab 8</a></li>
-            <li><a href="#">Tab 9</a></li>
-            <li><a href="#">Tab 10</a></li>
+            <li><a href="tab1.html">Tab 1</a></li>
+            <li><a href="tab2.html">Tab 2</a></li>
+            <li><a href="tab3.html">Tab 3</a></li>
+            <li><a href="tab4.html">Tab 4</a></li>
+            <li><a href="tab5.html">Tab 5</a></li>
+            <li><a href="tab6.html">Tab 6</a></li>
+            <li><a href="tab7.html">Tab 7</a></li>
+            <li><a href="tab8.html">Tab 8</a></li>
+            <li><a href="tab9.html">Tab 9</a></li>
+            <li><a href="tab10.html">Tab 10</a></li>
         </ul>
     </nav>
     <div class="container">
