--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     </nav>
     <div class="container">
         <h2>Hey guys! Click on the tab we've assigned to you. You'll see the changes you make to the website on your tab. </h2>
-        <h3> Please don't mess with anyone else's tab! This includes this homepage! In other words: Please do NOT touch index.html! </h3>
+        <h3> Please don't mess with anyone else's tab! This includes this homepage! In other words: Please do NOT touch index.html! Have fun!</h3>
+        
 
 
