--- a/tab7.html
+++ b/tab7.html
@@ -6,7 +6,7 @@
         <title> Tab7 </title>
     </head>
     <body>
-        <a href = "index.html"> Home </a>
+        <a href = "index.html"> The Home </a>
         <iframe src="https://giphy.com/embed/P6TDJvI3NB2Kq9MbBI" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/STRAPPEDENT-yeat-twizzy-septembersrich-P6TDJvI3NB2Kq9MbBI">via GIPHY</a></p>
         <h1>Top 5 songs of all time</h1>
         <h3>1.Rich Minion by Yeat</h3>
